--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
 <title>gbsplay homepage</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
 <h2>development</h2>
 <p>To follow the development process of gbsplay, you can acces the current CVS version: Either <a href="http://developer.berlios.de/cvs/?group_id=1362">check it out</a> or <a href="http://cvs.berlios.de/cgi-bin/viewcvs.cgi/gbsplay">browse it online</a>.</p>
 <p>You can also subscribe to the <a href="http://lists.berlios.de/mailman/listinfo/gbsplay-dev">development mailinglist</a> and the <a href="http://lists.berlios.de/mailman/listinfo/gbsplay-commits">CVS commit logs</a>.</p>
-<p>And you can of course send in patches for known <a href="http://developer.berlios.de/bugs/?func=browse&group_id=1362&set=open">bugs</a>.</p>
+<p>And you can of course send in patches for known <a href="http://developer.berlios.de/bugs/?func=browse&amp;group_id=1362&amp;set=open">bugs</a>.</p>
 <p>If you're using Debian testing/unstable, you can get development updates for the packages <tt>gbsplay</tt> and <tt>xmms-gbs</tt> by adding these lines to your <tt>/etc/apt/sources.list</tt>:</p>
 <pre>
 deb     http://www.h.shuttle.de/mitch/stuff ./
@@ -31,7 +32,9 @@ deb-src http://www.h.shuttle.de/mitch/stuff ./
 </ul>
 <hr>
 <p align="right">
-$Id: index.html,v 1.1 2004/04/02 09:02:53 mitch Exp $ :: hosted on <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
+$Id: index.html,v 1.2 2004/04/02 09:15:23 mitch Exp $ ::
+hosted on <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a> ::
+<a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88"></a>
 </p>
 </body>
 </html>
