--- a/homepage/index.html
+++ b/homepage/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
+<link rel="stylesheet" href="/style.css">
 <title>gbsplay homepage</title>
 </head>
 <body>
@@ -32,7 +33,7 @@ deb-src http://www.h.shuttle.de/mitch/stuff ./
 </ul>
 <hr>
 <p align="right">
-:: $Id: index.html,v 1.3 2004/04/02 09:17:23 mitch Exp $ ::
+:: $Id: index.html,v 1.4 2004/04/02 20:57:48 mitch Exp $ ::
 <a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a> ::
 hosted on <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a> ::
 </p>
