--- a/homepage/index.html
+++ b/homepage/index.html
@@ -33,9 +33,10 @@ deb-src http://www.h.shuttle.de/mitch/stuff ./
 </ul>
 <hr>
 <p align="right">
-:: $Id: index.html,v 1.4 2004/04/02 20:57:48 mitch Exp $ ::
-<a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a> ::
-hosted on <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a> ::
+$Id: index.html,v 1.5 2004/04/02 21:04:07 mitch Exp $
+<a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a>
+<a href="http://jigsaw.w3.org/css-validator/"><img border="0" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88p" align="top"></a>
+<a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
 </p>
 </body>
 </html>
