--- a/homepage/index.html
+++ b/homepage/index.html
@@ -2,20 +2,30 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="style.css">
 <title>gbsplay homepage</title>
 </head>
 <body>
 <h1>gbsplay homepage</h1>
-<h2>summary</h2>
+
+<hr>
+<p class="header">
+<a href="#summary">summary<a> :: <a href="#download">download</a> :: <a href="#contact">contact</a> :: <a href="#development">development</a> :: <a href="#links">links</a>
+</p>
+<hr>
+
+<h2><a name="summary">summary</a></h2>
 <p>gbsplay emulates the sound hardware of the Nintendo Gameboy. It is able to play the sounds from a Gameboy module dump (.GBS format) over /dev/dsp. Also included is an XMMS input plugin and a tool to display information about a .GBS file.</p>
-<h2>download</h2>
+
+<h2><a name="download">download</a></h2>
 <p>Release versions can be found on the <a href="http://developer.berlios.de/project/showfiles.php?group_id=1362">download page</a>.  Currently, a source .tar.gz and Debian testing/unstable packages are available.</p>
-<h2>contact</h2>
+
+<h2><a name="contact">contact</a></h2>
 <p>To contact the development team, write a mail to <a href="mailto:gbsplay-dev@lists.berlios.de">gbsplay-dev@lists.berlios.de</a>.  This is a public mailing list, so your mail will be seen by others (for example in the <a href="http://lists.berlios.de/pipermail/gbsplay-dev/">list archives</a>).</p>
 <p>If you find a bug, please report it via the <a href="http://developer.berlios.de/bugs/?group_id=1362">bug tracking system</a>.
 </p>
-<h2>development</h2>
+
+<h2><a name="development">development</aA</h2>
 <p>To follow the development process of gbsplay, you can acces the current CVS version: Either <a href="http://developer.berlios.de/cvs/?group_id=1362">check it out</a> or <a href="http://cvs.berlios.de/cgi-bin/viewcvs.cgi/gbsplay">browse it online</a>.</p>
 <p>You can also subscribe to the <a href="http://lists.berlios.de/mailman/listinfo/gbsplay-dev">development mailinglist</a> and the <a href="http://lists.berlios.de/mailman/listinfo/gbsplay-commits">CVS commit logs</a>.</p>
 <p>And you can of course send in patches for known <a href="http://developer.berlios.de/bugs/?func=browse&amp;group_id=1362&amp;set=open">bugs</a>.</p>
@@ -24,16 +34,18 @@
 deb     http://www.h.shuttle.de/mitch/stuff ./
 deb-src http://www.h.shuttle.de/mitch/stuff ./
 </pre>
-<h2>links</h2>
+
+<h2><a name="links">links</a></h2>
 <ul>
 <li><a href="http://developer.berlios.de/projects/gbsplay/">BerliOS project page</a></li>
 <li><a href="http://freshmeat.net/projects/gbsplay/">Freshmeat project page</a></li>
 <li><a href="http://www.cgarbs.de/gbsplay.en.html">download mirror #1</a></li>
 <li><a href="http://home.t-online.de/home/dietmar.garbs/download/gbsplay/">download mirror #2</a></li>
 </ul>
+
 <hr>
-<p align="right">
-$Id: index.html,v 1.5 2004/04/02 21:04:07 mitch Exp $
+<p class="footer">
+$Id: index.html,v 1.6 2004/04/02 21:23:26 mitch Exp $
 <a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a>
 <a href="http://jigsaw.w3.org/css-validator/"><img border="0" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88p" align="top"></a>
 <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
