--- a/homepage/index.html
+++ b/homepage/index.html
@@ -10,12 +10,13 @@
 
 <hr>
 <p class="header">
-<a href="#summary">summary<a> :: <a href="#download">download</a> :: <a href="#contact">contact</a> :: <a href="#development">development</a> :: <a href="#links">links</a>
+<a href="#about">about<a> :: <a href="#download">download</a> :: <a href="#contact">contact</a> :: <a href="#development">development</a> :: <a href="#links">links</a>
 </p>
 <hr>
 
-<h2><a name="summary">summary</a></h2>
+<h2><a name="about">about</a></h2>
 <p>gbsplay emulates the sound hardware of the Nintendo Gameboy. It is able to play the sounds from a Gameboy module dump (.GBS format) over /dev/dsp. Also included is an XMMS input plugin and a tool to display information about a .GBS file.</p>
+<p>gbsplay is written in C and runs on a variety of platforms: Linux, FreeBSD, Cygwin and MacOS X have been reported to work so far.</p>
 
 <h2><a name="download">download</a></h2>
 <p>Release versions can be found on the <a href="http://developer.berlios.de/project/showfiles.php?group_id=1362">download page</a>.  Currently, a source .tar.gz and Debian testing/unstable packages are available.</p>
@@ -45,7 +46,7 @@ deb-src http://www.h.shuttle.de/mitch/stuff ./
 
 <hr>
 <p class="footer">
-$Id: index.html,v 1.6 2004/04/02 21:23:26 mitch Exp $
+$Id: index.html,v 1.7 2004/04/02 21:26:22 mitch Exp $
 <a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a>
 <a href="http://jigsaw.w3.org/css-validator/"><img border="0" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88p" align="top"></a>
 <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
