--- a/homepage/index.html
+++ b/homepage/index.html
@@ -10,7 +10,7 @@
 
 <hr>
 <p class="header">
-<a href="#about">about<a> :: <a href="#download">download</a> :: <a href="#contact">contact</a> :: <a href="#development">development</a> :: <a href="#links">links</a>
+<a href="#about">about</a> :: <a href="#download">download</a> :: <a href="#contact">contact</a> :: <a href="#development">development</a> :: <a href="#links">links</a>
 </p>
 <hr>
 
@@ -46,7 +46,7 @@ deb-src http://www.h.shuttle.de/mitch/stuff ./
 
 <hr>
 <p class="footer">
-$Id: index.html,v 1.7 2004/04/02 21:26:22 mitch Exp $
+$Id: index.html,v 1.8 2004/04/02 21:27:25 mitch Exp $
 <a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a>
 <a href="http://jigsaw.w3.org/css-validator/"><img border="0" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88p" align="top"></a>
 <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
