--- a/homepage/index.html
+++ b/homepage/index.html
@@ -26,7 +26,7 @@
 <p>If you find a bug, please report it via the <a href="http://developer.berlios.de/bugs/?group_id=1362">bug tracking system</a>.
 </p>
 
-<h2><a name="development">development</aA</h2>
+<h2><a name="development">development</a></h2>
 <p>To follow the development process of gbsplay, you can acces the current CVS version: Either <a href="http://developer.berlios.de/cvs/?group_id=1362">check it out</a> or <a href="http://cvs.berlios.de/cgi-bin/viewcvs.cgi/gbsplay">browse it online</a>.</p>
 <p>You can also subscribe to the <a href="http://lists.berlios.de/mailman/listinfo/gbsplay-dev">development mailinglist</a> and the <a href="http://lists.berlios.de/mailman/listinfo/gbsplay-commits">CVS commit logs</a>.</p>
 <p>And you can of course send in patches for known <a href="http://developer.berlios.de/bugs/?func=browse&amp;group_id=1362&amp;set=open">bugs</a>.</p>
@@ -46,7 +46,7 @@ deb-src http://www.h.shuttle.de/mitch/stuff ./
 
 <hr>
 <p class="footer">
-$Id: index.html,v 1.8 2004/04/02 21:27:25 mitch Exp $
+$Id: index.html,v 1.9 2004/04/02 21:28:14 mitch Exp $
 <a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a>
 <a href="http://jigsaw.w3.org/css-validator/"><img border="0" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88p" align="top"></a>
 <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
