--- a/homepage/index.html
+++ b/homepage/index.html
@@ -32,9 +32,10 @@
 <p>And you can of course send in patches for known <a href="http://developer.berlios.de/bugs/?func=browse&amp;group_id=1362&amp;set=open">bugs</a>.</p>
 <p>If you're using Debian, you can get development updates for the packages <tt>gbsplay</tt> and <tt>xmms-gbs</tt> by adding these lines to your <tt>/etc/apt/sources.list</tt>:</p>
 <pre>
-deb     http://www.h.shuttle.de/mitch/stuff ./
-deb-src http://www.h.shuttle.de/mitch/stuff ./
+deb     http://www.cgarbs.de/stuff ./
+deb-src http://www.cgarbs.de/stuff ./
 </pre>
+<p><small>(<a href="http://www.cgarbs.de/stuff/deb-repository.html">more information</a> about this repository)</small></p>
 
 <h2><a name="links">links</a></h2>
 <ul>
@@ -45,7 +46,7 @@ deb-src http://www.h.shuttle.de/mitch/stuff ./
 
 <hr>
 <p class="footer">
-$Id: index.html,v 1.11 2005/10/15 16:40:48 mitch Exp $
+$Id: index.html,v 1.12 2006/01/21 22:29:08 mitch Exp $
 <a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a>
 <a href="http://jigsaw.w3.org/css-validator/"><img border="0" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88p" align="top"></a>
 <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
