--- a/homepage/index.html
+++ b/homepage/index.html
@@ -22,13 +22,13 @@
 <p>Release versions can be found on the <a href="http://developer.berlios.de/project/showfiles.php?group_id=1362">download page</a>.  Currently, a source .tar.gz and Debian packages are available.</p>
 
 <h2><a name="contact">contact</a></h2>
-<p>To contact the development team, write a mail to <a href="mailto:gbsplay-dev@lists.berlios.de">gbsplay-dev@lists.berlios.de</a>.  This is a public mailing list, so your mail will be seen by others (for example in the <a href="http://lists.berlios.de/pipermail/gbsplay-dev/">list archives</a>).</p>
+<p>To contact the development team, write a mail to <a href="mailto:gbsplay-dev@lists.uguu.de">gbsplay-dev@lists.uguu.de</a>.  This is a public mailing list, so your mail will be seen by others (for example in the <a href="http://lists.uguu.de/pipermail/gbsplay-dev/">list archives</a>).</p>
 <p>If you find a bug, please report it via the <a href="http://developer.berlios.de/bugs/?group_id=1362">bug tracking system</a>.
 </p>
 
 <h2><a name="development">development</a></h2>
 <p>To follow the development process of gbsplay, you can acces the current CVS version: Either <a href="http://developer.berlios.de/cvs/?group_id=1362">check it out</a> or <a href="http://cvs.berlios.de/cgi-bin/viewcvs.cgi/gbsplay">browse it online</a>.</p>
-<p>You can also subscribe to the <a href="http://lists.berlios.de/mailman/listinfo/gbsplay-dev">development mailinglist</a> and the <a href="http://lists.berlios.de/mailman/listinfo/gbsplay-commits">CVS commit logs</a>.</p>
+<p>You can also subscribe to the <a href="http://lists.uguu.de/cgi-bin/mailman/listinfo/gbsplay-dev">development mailinglist</a> and the <a href="http://lists.uguu.de/cgi-bin/mailman/listinfo/gbsplay-commits">CVS commit logs</a>.</p>
 <p>And you can of course send in patches for known <a href="http://developer.berlios.de/bugs/?func=browse&amp;group_id=1362&amp;set=open">bugs</a>.</p>
 <p>If you're using Debian, you can get development updates for the packages <tt>gbsplay</tt> and <tt>xmms-gbs</tt> by adding these lines to your <tt>/etc/apt/sources.list</tt>:</p>
 <pre>
@@ -46,7 +46,7 @@ deb-src http://www.cgarbs.de/stuff ./
 
 <hr>
 <p class="footer">
-$Id: index.html,v 1.12 2006/01/21 22:29:08 mitch Exp $
+$Id: index.html,v 1.13 2008/06/20 12:19:12 mitch Exp $
 <a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a>
 <a href="http://jigsaw.w3.org/css-validator/"><img border="0" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88p" align="top"></a>
 <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
