--- a/homepage/index.html
+++ b/homepage/index.html
@@ -27,10 +27,9 @@
 </p>
 
 <h2><a name="development">development</a></h2>
-<p>To follow the development process of gbsplay, you can acces the current CVS version: Either <a href="http://developer.berlios.de/cvs/?group_id=1362">check it out</a> or <a href="http://cvs.berlios.de/cgi-bin/viewcvs.cgi/gbsplay">browse it online</a>.</p>
-<p>You can also subscribe to the <a href="http://lists.uguu.de/cgi-bin/mailman/listinfo/gbsplay-dev">development mailinglist</a> and the <a href="http://lists.uguu.de/cgi-bin/mailman/listinfo/gbsplay-commits">CVS commit logs</a>.</p>
-<p>And you can of course send in patches for known <a href="http://developer.berlios.de/bugs/?func=browse&amp;group_id=1362&amp;set=open">bugs</a>.</p>
-<p>If you're using Debian, you can get development updates for the packages <tt>gbsplay</tt> and <tt>xmms-gbs</tt> by adding these lines to your <tt>/etc/apt/sources.list</tt>:</p>
+<p>To follow the development process of gbsplay, you can acces the current git version: Either clone it at <tt>http://www.cgarbs.de/git/gbsplay.git/</tt> or <a href="http://www.cgarbs.de/cgi-bin/gitweb.cgi/gbsplay.git">browse it online</a>.</p>
+<p>You can also subscribe to the <a href="http://lists.uguu.de/cgi-bin/mailman/listinfo/gbsplay-dev">development mailinglist</a> or track the git changelog feed either as <a href="http://www.cgarbs.de/cgi-bin/gitweb.cgi/gbsplay.git?a=atom">Atom</a> or <a href="http://www.cgarbs.de/cgi-bin/gitweb.cgi/gbsplay.git?a=rss">RSS</a>.</p>
+<p>If you're using Debian, you can get development updates for the packages <tt>gbsplay</tt> by adding these lines to your <tt>/etc/apt/sources.list</tt>:</p>
 <pre>
 deb     http://www.cgarbs.de/stuff ./
 deb-src http://www.cgarbs.de/stuff ./
@@ -39,6 +38,7 @@ deb-src http://www.cgarbs.de/stuff ./
 
 <h2><a name="links">links</a></h2>
 <ul>
+<li><a href="http://www.cgarbs.de/cgi-bin/gitweb.cgi/gbsplay.git">git repository</a></li>
 <li><a href="http://developer.berlios.de/projects/gbsplay/">BerliOS project page</a></li>
 <li><a href="http://freshmeat.net/projects/gbsplay/">Freshmeat project page</a></li>
 <li><a href="http://www.cgarbs.de/gbsplay.en.html">download mirror #1</a></li>
@@ -46,7 +46,7 @@ deb-src http://www.cgarbs.de/stuff ./
 
 <hr>
 <p class="footer">
-$Id: index.html,v 1.13 2008/06/20 12:19:12 mitch Exp $
+$Id: index.html,v 1.14 2008/08/09 07:55:41 mitch Exp $
 <a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a>
 <a href="http://jigsaw.w3.org/css-validator/"><img border="0" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88p" align="top"></a>
 <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
