add ditz issue tracker

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -23,7 +23,7 @@
 
 <h2><a name="contact">contact</a></h2>
 <p>To contact the development team, write a mail to <a href="mailto:gbsplay-dev@lists.uguu.de">gbsplay-dev@lists.uguu.de</a>.  This is a public mailing list, so your mail will be seen by others (for example in the <a href="http://lists.uguu.de/pipermail/gbsplay-dev/">list archives</a>).</p>
-<p>If you find a bug, please report it via the <a href="http://developer.berlios.de/bugs/?group_id=1362">bug tracking system</a>.
+<p>If you find a bug, please report it via the mailing list.  Current bug, task and release status can be seen in our <a href="http://www.cgarbs.de/ditz/gbsplay/">ditz issue tracker</a>.
 </p>
 
 <h2><a name="development">development</a></h2>
@@ -46,7 +46,7 @@ deb-src http://www.cgarbs.de/stuff ./
 
 <hr>
 <p class="footer">
-$Id: index.html,v 1.15 2008/08/09 09:07:13 mitch Exp $
+$Id: index.html,v 1.16 2008/08/09 09:08:41 mitch Exp $
 <a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a>
 <a href="http://jigsaw.w3.org/css-validator/check/referer"><img border="0" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88p" align="top"></a>
 <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
