--- a/homepage/index.html
+++ b/homepage/index.html
@@ -20,6 +20,7 @@
 
 <h2><a name="download">download</a></h2>
 <p>Release versions can be found on the <a href="http://developer.berlios.de/project/showfiles.php?group_id=1362">download page</a>.  Currently, a source .tar.gz and Debian packages are available.</p>
+<p>gbsplay is also officially available in <a href="http://packages.debian.org/sid/gbsplay">Debian</a>, <a href="http://www.freebsdsoftware.org/audio/gbsplay.html">FreeBSD</a> and <a href="http://packages.gentoo.org/package/media-sound/gbsplay">Gentoo</a>.  These packages might be slightly older than the latest gbsplay release.</p>
 
 <h2><a name="contact">contact</a></h2>
 <p>To contact the development team, write a mail to <a href="mailto:gbsplay-dev@lists.uguu.de">gbsplay-dev@lists.uguu.de</a>.  This is a public mailing list, so your mail will be seen by others (for example in the <a href="http://lists.uguu.de/pipermail/gbsplay-dev/">list archives</a>).</p>
@@ -46,7 +47,7 @@ deb-src http://www.cgarbs.de/stuff ./
 
 <hr>
 <p class="footer">
-$Id: index.html,v 1.16 2008/08/09 09:08:41 mitch Exp $
+$Id: index.html,v 1.17 2008/12/20 21:47:24 mitch Exp $
 <a href="http://validator.w3.org/check/referer"><img border="0" src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" align="top"></a>
 <a href="http://jigsaw.w3.org/css-validator/check/referer"><img border="0" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" height="31" width="88p" align="top"></a>
 <a href="http://developer.berlios.de"><img src="http://developer.berlios.de/bslogo.php?group_id=1362" align="top" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
